--- a/app/views/admin/neighbourhoods/_form.html.erb
+++ b/app/views/admin/neighbourhoods/_form.html.erb
@@ -1,7 +1,6 @@
 <%= simple_form_for [:admin, @neighbourhood] do |f| %>
 
-  <%= render_component "error", object: @neighbourhood %>
-
+  <%= render(ErrorComponent.new(@neighbourhood)) %>
   <h2>Neighbourhood name</h2>
   <p>This can be anything but is almost always the ward name. It's what shows up in the user frontend. If the neighbourhood name is long, add an abbreviation too.</p>
 
