--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -26,7 +26,7 @@
           <%= render(AdminFlash.new()) %>
           <%= yield %>
 
-          <% if Rails.env.development? %>r
+          <% if Rails.env.development? %>
             <div class="text-monospace text-muted mt-5">
               <%= debug(params) %>
               <%# console %>
