--- a/app/views/admin/users/profile.html.erb
+++ b/app/views/admin/users/profile.html.erb
@@ -6,7 +6,7 @@
 
 <%= simple_form_for current_user, as: :user, method: :patch, url: update_profile_admin_user_path(current_user), html: { class: "form-horizontal" } do |f| %>
   <div class="row mt-4">
-    <%= render_component "error", object: current_user %>
+    <%= render(ErrorComponent.new(current_user)) %>
     <div class="col-md-12">
       <h2>Basic information</h2>
       <%= render "contact", f: f %>
