MV changes: AdminNew, AdminFlash, ErrorComponent, OpeningTimes (#2726)
* chore: move admin_flash and admin_edit

* chore: convert error component, convert opening times component, fix stray R in admin

* Update app/components/opening_times.html.erb

Co-authored-by: Dr Kim Foale <kim@gfsc.studio>

* Update app/assets/stylesheets/application.scss

Co-authored-by: Dr Kim Foale <kim@gfsc.studio>

---------

Co-authored-by: Dr Kim Foale <kim@gfsc.studio>

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,7 @@
 @import "components/home_strapline_component";
 @import "components/link_btn_lrg_component";
 @import "components/max_width_component";
+@import "components/opening_times";
 @import "components/neighbourhood_home_card_component";
 @import "components/partner_preview_component.scss";
 @import "components/partnership_card_component";
