chore: move components from mv to viewcomponent

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,8 +38,10 @@
 @import "components/container_with_header_component";
 @import "components/featured_partnerships_component";
 @import "components/filters";
+@import "components/footer";
 @import "components/four_col_grid_component";
 @import "components/full_width_action_component";
+@import "components/hero_component";
 @import "components/hero_section_component";
 @import "components/home_footer_component";
 @import "components/home_strapline_component";
