--- a/app/components/footer.html.erb
+++ b/app/components/footer.html.erb
@@ -15,12 +15,12 @@
         <h5 class="allcaps small">Site Navigation</h5>
         <nav role="navigation">
           <ul>
-            <li><%= active_link_to "Home", root_path %></li>
-            <li><%= active_link_to "Events", events_path %></li>
-            <li><%= active_link_to "Partners", partners_path %></li>
-            <li><%= active_link_to "Log in", new_user_session_path %></li>
-            <li><%= active_link_to "Privacy", privacy_path %></li>
-            <li><%= active_link_to "Terms", terms_of_use_path %></li>
+            <li><%= helpers.active_link_to "Home", root_path %></li>
+            <li><%= helpers.active_link_to "Events", events_path %></li>
+            <li><%= helpers.active_link_to "Partners", partners_path %></li>
+            <li><%= helpers.active_link_to "Log in", new_user_session_path %></li>
+            <li><%= helpers.active_link_to "Privacy", privacy_path %></li>
+            <li><%= helpers.active_link_to "Terms", terms_of_use_path %></li>
           </ul>
         </nav>
       </div>
