--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -19,3 +19,5 @@ $text-spacing-desktop: 12rem;
 @import "home/pages/impact";
 @import "home/pages/index";
 @import "home/pages/our_story";
+
+@import "home/components/help_adding_events";
