--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,8 +1,8 @@
 <% content_for :title, "Privacy Policy" %>
 
 <article class="home margin">
-
-  <%= render_component "hero", title: "PlaceCal Privacy Policy" %>
+  <%= render(HeroComponent.new("PlaceCal Privacy Policy")) %>
+  
 
   <div class="card card--plain">
     <%= render MaxWidthComponent.new do %>
