--- a/app/views/pages/terms_of_use.html.erb
+++ b/app/views/pages/terms_of_use.html.erb
@@ -2,8 +2,7 @@
 
 <article class="home margin">
 
-  <%= render_component "hero", title: "PlaceCal Terms of Use" %>
-
+<%= render(HeroComponent.new("PlaceCal Terms of Use")) %>
 
   <div class="card card--plain">
     <%= render MaxWidthComponent.new do %>
