--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,7 +38,8 @@
 </div>
 <%= render 'shared/map', points: @map, site: @current_site.slug, style: :multi %>
 
-<%= render_component "meta", permalink: "/events/#{@event.id}" do %>
+<%= render(Meta.new("/events/#{@event.id}")) do |component| %>
+<% component.with_link do %>
   <%# link_to 'Subscribe to this event with iCal', event_url(@event, protocol: :webcal, format: :ics) %>
   <% contact = @event&.calendar&.contact_information %>
   <% if contact %>
@@ -48,5 +49,6 @@
                                   subject: "I think there's a problem with PlaceCal event http://placecal.org#{event_path(@event)}",
                                   cc: 'support@placecal.org' %>
     </div>
+  <% end %>
   <% end %>
 <% end %>
