chore: missed components

--- a/app/views/sites/mossley.html.erb
+++ b/app/views/sites/mossley.html.erb
@@ -42,7 +42,7 @@
   <div class="c">
     <div class="g">
       <div class="gi gi__1-3">
-        <%= render(HelpAddingEvents.new()) %>
+        <%= render(HelpAddingEvents.new(@site)) %>
       </div>
       <div class="gi gi__1-3">
         <%= render(ComputerAccess.new(@places_to_get_online)) %>
