--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,13 +38,16 @@
 @import "components/container_with_header_component";
 @import "components/featured_partnerships_component";
 @import "components/filters";
+@import "components/footer";
 @import "components/four_col_grid_component";
 @import "components/full_width_action_component";
+@import "components/hero_component";
 @import "components/hero_section_component";
 @import "components/home_footer_component";
 @import "components/home_strapline_component";
 @import "components/link_btn_lrg_component";
 @import "components/max_width_component";
+@import "components/meta";
 @import "components/opening_times";
 @import "components/neighbourhood_home_card_component";
 @import "components/partner_preview_component.scss";
