--- a/app/views/sites/mossley.html.erb
+++ b/app/views/sites/mossley.html.erb
@@ -42,13 +42,13 @@
   <div class="c">
     <div class="g">
       <div class="gi gi__1-3">
-        <%= render_component 'help_adding_events' %>
+        <%= render(HelpAddingEvents.new(@site)) %>
       </div>
       <div class="gi gi__1-3">
-        <%= render_component 'computer_access', places: @places_to_get_online %>
+        <%= render(ComputerAccess.new(@places_to_get_online)) %>
       </div>
       <div class="gi gi__1-3">
-        <%= render_component 'help_getting_help' %>
+        <%= render(HelpGettingHelp.new()) %>
       </div>
     </div>
   </div>
