--- a/app/views/admin/collections/index.html.erb
+++ b/app/views/admin/collections/index.html.erb
@@ -1,10 +1,11 @@
 <%# TODO: Only show Edit link for root users %>
 
-<%= render_component "admin_index",
+<%= render AdminIndexComponent.new(
   title: "Collections",
   model: :collections,
   column_titles: ['ID', 'Name', 'Description'],
   columns: %i[id name description],
   data: @collections,
   new_link: new_admin_collection_path
+)
 %>
