Update path to stylesheet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,7 @@
 @import "components/footer";
 @import "components/four_col_grid_component";
 @import "components/full_width_action_component";
+@import "components/help_adding_events";
 @import "components/hero_component";
 @import "components/hero_section_component";
 @import "components/home_footer_component";
