Add new stylesheet import

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,4 +55,5 @@
 @import "components/partner_preview_component.scss";
 @import "components/partnership_card_component";
 @import "components/pull_quote_component";
+@import "components/resource_not_found";
 @import "components/steps_component";
