--- a/app/components/event_list/_event_list.html.erb
+++ b/app/components/event_list/_event_list.html.erb
@@ -14,11 +14,11 @@
     <ol class="events reset">
       <% events.each do |event| %>
         <li>
-          <%= render_component "event", context: @period,
+          <%= render(EventComponent.new(context: @period,
                                         event: event,
                                         primary_neighbourhood: @primary_neighbourhood,
                                         show_neighbourhoods: @current_site.show_neighbourhoods?,
-                                        badge_zoom_level: @current_site.badge_zoom_level %>
+                                        badge_zoom_level: @current_site.badge_zoom_level) %>
         </li>
       <% end %>
     </ol>
