Fix component errors

--- a/app/views/events/activities.html.erb
+++ b/app/views/events/activities.html.erb
@@ -11,10 +11,11 @@
   <ol class="events reset">
     <% @events.each do |event| %>
       <li class="event">
-        <%= render(EventComponent.new(context: :week,
+        <%= render(EventComponent.new(
+                                      site: @current_site
+                                      context: :week,
                                       event: event,
-                                      primary_neighbourhood: @primary_neighbourhood,
-                                      show_neighbourhoods: @current_site.show_neighbourhoods?) %>
+                                      primary_neighbourhood: @primary_neighbourhood) %>
       </li>
     <% end %>
   </ol>
