--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,4 +57,4 @@
 @import "components/pull_quote_component";
 @import "components/resource_not_found";
 @import "components/steps_component";
-@import "components/event_component.scss";
+@import "components/event_component";
