--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -42,3 +42,4 @@
 <meta name="twitter:creator" content="@gfscstudio">
 
 <meta property="og:url" content="<%= request.original_url %>">
+<meta name="robots" content="noarchive">
