--- a/app/views/admin/debug/icons.html.erb
+++ b/app/views/admin/debug/icons.html.erb
@@ -13,12 +13,12 @@
   icon_categories = {
     'Actions' => %i[trash plus check edit x upload external_link logout cog swap eye eye_off bell],
     'Navigation' => %i[home chevron_right chevron_left],
-    'Status / Alerts' => %i[warning info lightning check_circle x_circle],
-    'Content Types' => %i[partner calendar site event user photo],
-    'People' => %i[users partnership user_add],
+    'Status / Alerts' => %i[crown warning info lightning check_circle x_circle],
+    'Content Types' => %i[partner calendar site event user photo article partnership tag neighbourhood],
+    'People' => %i[users user_add],
     'Location' => %i[location map_pin],
     'Communication' => %i[chat link mail],
-    'Resources' => %i[book clipboard desktop newspaper tag list credit_card bug map code],
+    'Resources' => %i[book clipboard desktop newspaper list credit_card bug map code],
     'Social' => %i[website facebook twitter instagram]
   }
 %>
