style(partners): Update neighbourhood display on location tab
- Create NeighbourhoodCardComponent to show neighbourhood with hierarchy
- Display current neighbourhood prominently with level badge
- Show parent hierarchy (England first) as colored badges beneath
- Update location tab to use card styling matching contact tab
- Add clock and car icons to svg_icons_helper
- Use neighbourhood card for service areas with existing selections
- Remove colon from neighbourhood label

--- a/app/views/admin/partners/_service_area_fields.html.erb
+++ b/app/views/admin/partners/_service_area_fields.html.erb
@@ -1,2 +1,11 @@
 <% can_remove = !f.object.neighbourhood_id || current_user.can_edit_partners_neighbourhood_by_id?(f.object.neighbourhood_id, @partner.id) %>
-<%= render Admin::CascadingNeighbourhoodFieldsComponent.new(form: f, show_remove: can_remove) %>
+<% if f.object.neighbourhood.present? %>
+  <%= render Admin::NeighbourhoodCardComponent.new(
+        neighbourhood: f.object.neighbourhood,
+        show_header: false,
+        show_remove: can_remove,
+        form: f
+      ) %>
+<% else %>
+  <%= render Admin::CascadingNeighbourhoodFieldsComponent.new(form: f, show_remove: can_remove) %>
+<% end %>
