--- a/app/views/admin/partners/_address_fields.html.erb
+++ b/app/views/admin/partners/_address_fields.html.erb
@@ -1,45 +1,37 @@
 <%= form.fields_for :address, @partner.address || Address.new do |address_form| %>
-<div class='nested-fields'
+<div class="nested-fields"
      data-controller="partner-address"
      data-partner-address-partner-id-value="<%= partner.id %>"
      data-partner-address-warn-of-delisting-value="<%= partner.warn_user_clear_address?(current_user) ? 'true' : 'false' %>">
 
-  <div class="grid gap-1">
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :street_address) %></legend>
-      <%= address_form.input_field :street_address, class: 'input input-bordered w-full address_field' %>
-    </fieldset>
+  <fieldset class="fieldset">
+    <legend class="fieldset-legend"><%= attr_label(:address, :street_address) %></legend>
+    <%= address_form.input_field :street_address, class: 'input input-bordered w-full bg-base-100 address_field' %>
+  </fieldset>
 
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :street_address_2) %></legend>
-      <%= address_form.input_field :street_address2, class: 'input input-bordered w-full address_field' %>
-    </fieldset>
+  <fieldset class="fieldset">
+    <legend class="fieldset-legend"><%= attr_label(:address, :street_address_2) %></legend>
+    <%= address_form.input_field :street_address2, class: 'input input-bordered w-full bg-base-100 address_field' %>
+  </fieldset>
 
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :street_address_3) %></legend>
-      <%= address_form.input_field :street_address3, class: 'input input-bordered w-full address_field' %>
-    </fieldset>
+  <fieldset class="fieldset">
+    <legend class="fieldset-legend"><%= attr_label(:address, :street_address_3) %></legend>
+    <%= address_form.input_field :street_address3, class: 'input input-bordered w-full bg-base-100 address_field' %>
+  </fieldset>
 
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :city) %></legend>
-      <%= address_form.input_field :city, class: 'input input-bordered w-full address_field' %>
-    </fieldset>
+  <fieldset class="fieldset">
+    <legend class="fieldset-legend"><%= attr_label(:address, :city) %></legend>
+    <%= address_form.input_field :city, class: 'input input-bordered w-full bg-base-100 address_field' %>
+  </fieldset>
 
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :postcode) %></legend>
-      <%= address_form.input_field :postcode, class: 'input input-bordered w-full address_field' %>
-    </fieldset>
-  </div>
+  <fieldset class="fieldset">
+    <legend class="fieldset-legend"><%= attr_label(:address, :postcode) %></legend>
+    <%= address_form.input_field :postcode, class: 'input input-bordered w-full bg-base-100 address_field' %>
+  </fieldset>
 
   <div data-partner-address-target="addressInfoArea" class="mt-4">
-    <% if partner.address&.neighbourhood.present? %>
-      <div class="alert alert-info text-sm">
-        <%= icon(:map_pin, size: '4', css_class: 'shrink-0') %>
-        <span><%= t('admin.address.neighbourhood_label') %> <strong><%= link_to_neighbourhood(partner.address.neighbourhood) %></strong></span>
-      </div>
-    <% end %>
     <% if partner.can_clear_address?(current_user) %>
-      <%= link_to t('admin.address.clear_address'), '#', class: "btn btn-ghost btn-xs mt-2", data: { action: "click->partner-address#do_clear_address" } %>
+      <%= link_to t('admin.address.clear_address'), '#', class: "btn btn-ghost btn-xs", data: { action: "click->partner-address#do_clear_address" } %>
     <% end %>
   </div>
 </div>
