--- a/app/views/admin/partners/_form_tab_location.html.erb
+++ b/app/views/admin/partners/_form_tab_location.html.erb
@@ -3,36 +3,70 @@
   description: t('admin.partners.sections.location_description')
 ) %>
 
-<div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-  <fieldset class="fieldset bg-base-200 border-base-300 rounded-box border p-4">
-    <legend class="fieldset-legend"><%= attr_label(:partner, :address) %></legend>
-    <%= render 'address_fields', form: f, partner: @partner %>
-    <% if @partner&.address&.neighbourhood&.legacy_neighbourhood? %>
-      <div role="alert" class="alert alert-warning mt-4 text-sm">
-        <%= icon(:warning, size: '5', css_class: 'shrink-0') %>
-        <span><%= t('admin.partners.warnings.outdated_neighbourhood', email: 'support@placecal.org').html_safe %></span>
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+  <div class="space-y-6">
+    <%# Address Card %>
+    <div class="card bg-base-200/50 border border-base-300">
+      <div class="card-body p-4 gap-3">
+        <h3 class="font-semibold flex items-center gap-2">
+          <%= icon(:map, size: '4') %>
+          <%= attr_label(:partner, :address) %>
+        </h3>
+        <%= render 'address_fields', form: f, partner: @partner %>
+        <% if @partner&.address&.neighbourhood&.legacy_neighbourhood? %>
+          <div role="alert" class="alert alert-warning text-sm">
+            <%= icon(:warning, size: '5', css_class: 'shrink-0') %>
+            <span><%= t('admin.partners.warnings.outdated_neighbourhood', email: 'support@placecal.org').html_safe %></span>
+          </div>
+        <% end %>
+        <% if partner_has_unmappable_postcode?(@partner) %>
+          <div role="alert" class="alert alert-warning text-sm">
+            <%= icon(:warning, size: '5', css_class: 'shrink-0') %>
+            <span><%= t('admin.partners.warnings.unmappable_postcode') %></span>
+          </div>
+        <% end %>
+        <%# Neighbourhood display within address card %>
+        <% if @partner.address&.neighbourhood.present? %>
+          <fieldset class="fieldset">
+            <legend class="fieldset-legend flex items-center gap-1">
+              <%= icon(:neighbourhood, size: '4') %>
+              <%= t('admin.address.neighbourhood_label') %>
+            </legend>
+            <%= render Admin::NeighbourhoodCardComponent.new(
+                  neighbourhood: @partner.address.neighbourhood,
+                  show_header: false
+                ) %>
+          </fieldset>
+        <% end %>
       </div>
-    <% end %>
-    <% if partner_has_unmappable_postcode?(@partner) %>
-      <div role="alert" class="alert alert-warning mt-4 text-sm">
-        <%= icon(:warning, size: '5', css_class: 'shrink-0') %>
-        <span><%= t('admin.partners.warnings.unmappable_postcode') %></span>
-      </div>
-    <% end %>
-  </fieldset>
+    </div>
+  </div>
 
-  <fieldset class="fieldset bg-base-200 border-base-300 rounded-box border p-4">
-    <legend class="fieldset-legend"><%= t('admin.sections.service_areas') %></legend>
-    <p class="text-sm text-base-content/60 mb-4"><%= t('admin.partners.sections.service_areas_description') %> <br><br><%= t('admin.partners.sections.service_areas_hint') %></p>
-    <%= nested_form_for(f, :service_areas, add_text: t('admin.service_areas.add'), add_class: 'btn btn-sm bg-placecal-orange hover:bg-orange-600 text-white border-placecal-orange', partial: 'service_area_fields') do %>
-      <%= f.simple_fields_for :service_areas do |neighbourhood| %>
-        <%= render 'service_area_fields', f: neighbourhood %>
+  <%# Service Areas Card %>
+  <div class="card bg-base-200/50 border border-base-300 h-fit">
+    <div class="card-body p-4 gap-3">
+      <h3 class="font-semibold flex items-center gap-2">
+        <%= icon(:car, size: '4') %>
+        <%= t('admin.sections.service_areas') %>
+      </h3>
+      <p class="text-xs text-base-content/60"><%= t('admin.partners.sections.service_areas_description') %></p>
+      <p class="text-xs text-base-content/60"><%= t('admin.partners.sections.service_areas_hint') %></p>
+      <%= nested_form_for(f, :service_areas, add_text: t('admin.service_areas.add'), add_class: 'btn btn-sm bg-placecal-orange hover:bg-orange-600 text-white border-placecal-orange', partial: 'service_area_fields') do %>
+        <%= f.simple_fields_for :service_areas do |neighbourhood| %>
+          <%= render 'service_area_fields', f: neighbourhood %>
+        <% end %>
       <% end %>
-    <% end %>
-  </fieldset>
+    </div>
+  </div>
 </div>
 
-<fieldset class="fieldset bg-base-200 border-base-300 rounded-box border p-4 mt-8">
-  <legend class="fieldset-legend"><%= t('admin.sections.opening_times') %></legend>
-  <%= render 'opening_times', f: f %>
-</fieldset>
+<%# Opening Times Card %>
+<div class="card bg-base-200/50 border border-base-300 mt-6">
+  <div class="card-body p-4 gap-3">
+    <h3 class="font-semibold flex items-center gap-2">
+      <%= icon(:clock, size: '4') %>
+      <%= t('admin.sections.opening_times') %>
+    </h3>
+    <%= render 'opening_times', f: f %>
+  </div>
+</div>
