--- a/app/views/admin/partners/index.html.erb
+++ b/app/views/admin/partners/index.html.erb
@@ -1,35 +1,4 @@
 <%
-  # Get wards that have partners, with counts
-  ward_counts = Neighbourhood
-    .where(unit: 'ward')
-    .joins(addresses: :partners)
-    .group('neighbourhoods.id')
-    .count
-
-  ward_options = Neighbourhood
-    .where(id: ward_counts.keys)
-    .order(:name)
-    .map do |w|
-      {
-        value: w.id.to_s,
-        label: "#{w.shortname} (#{ward_counts[w.id]})",
-        parent: w.ancestry&.split('/')&.last
-      }
-    end
-
-  # Get districts that have partners in their wards, with counts
-  district_ids_with_partners = ward_options.map { |w| w[:parent] }.compact.uniq
-  district_counts = ward_options.each_with_object(Hash.new(0)) do |ward, counts|
-    counts[ward[:parent]] += ward_counts[ward[:value].to_i]
-  end
-
-  district_options = Neighbourhood
-    .where(id: district_ids_with_partners)
-    .order(:name)
-    .map do |d|
-      { value: d.id.to_s, label: "#{d.shortname} (#{district_counts[d.id.to_s]})" }
-    end
-
   # Get partnerships for filter dropdown, with counts
   partnership_counts = Partnership.joins(:partners).group('tags.id').count
   partnership_options = Partnership.where(id: partnership_counts.keys).order(:name).map do |p|
@@ -70,17 +39,6 @@
     default_sort: { column: 'updated_at', direction: 'desc' },
     filters: [
       {
-        column: 'district',
-        label: 'District',
-        options: district_options
-      },
-      {
-        column: 'ward',
-        label: 'Neighbourhood',
-        depends_on: 'district',
-        options: ward_options
-      },
-      {
         column: 'partnership',
         label: 'Partnership',
         options: partnership_options
@@ -108,6 +66,55 @@
         label: 'Category',
         width: 'w-28',
         options: category_options
+      }
+    ],
+    secondary_filters: [
+      {
+        column: 'country_id',
+        label: 'Country (L5)',
+        width: 'min-w-40',
+        type: :hierarchical,
+        level: 5,
+        endpoint: children_admin_neighbourhoods_path(format: :json),
+        options: Neighbourhood.countries.latest_release.order(:name).map { |n|
+          { value: n.id, label: n.name }
+        }
+      },
+      {
+        column: 'region_id',
+        label: 'Region (L4)',
+        width: 'min-w-48',
+        type: :hierarchical,
+        level: 4,
+        parent_filter: 'country_id',
+        endpoint: children_admin_neighbourhoods_path(format: :json)
+      },
+      {
+        column: 'county_id',
+        label: 'County (L3)',
+        width: 'min-w-48',
+        type: :hierarchical,
+        level: 3,
+        parent_filter: 'region_id',
+        endpoint: children_admin_neighbourhoods_path(format: :json)
+      },
+      {
+        column: 'district_id',
+        label: 'District (L2)',
+        width: 'min-w-48',
+        type: :hierarchical,
+        level: 2,
+        parent_filter: 'county_id',
+        endpoint: children_admin_neighbourhoods_path(format: :json)
+      },
+      {
+        column: 'ward_id',
+        label: 'Ward (L1)',
+        width: 'min-w-48',
+        type: :hierarchical,
+        level: 1,
+        parent_filter: 'district_id',
+        endpoint: children_admin_neighbourhoods_path(format: :json)
       }
     ],
     data: @partners,
