--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -1,17 +1,29 @@
+<%
+  # Get site admins for tom-select filter
+  site_admin_ids = Site.where.not(site_admin_id: nil).distinct.pluck(:site_admin_id)
+  site_admin_options = User.where(id: site_admin_ids).order(:first_name, :last_name).map do |u|
+    { value: u.id.to_s, label: [u.first_name, u.last_name].compact.join(' ') }
+  end
+%>
+
 <%= render partial: 'layouts/admin/datatable', locals: {
     title: 'Sites',
     model: :sites,
     column_titles: [
       'Site',
-      'Neighbourhoods',
+      'Neighbourhood',
+      icon_column_header(:partner, 'Partners'),
+      icon_column_header(:calendar, 'Events'),
       'Site Admin',
       'Last Updated',
       ''
     ],
-    columns: %i[name neighbourhoods site_admin updated_at actions],
+    columns: %i[name primary_neighbourhood partners_count events_count site_admin updated_at actions],
     column_config: {
       name: {},
-      neighbourhoods: { align: :center, sortable: false, fit: true },
+      primary_neighbourhood: { sortable: false },
+      partners_count: { align: :center, sortable: false, fit: true },
+      events_count: { align: :center, sortable: false, fit: true },
       site_admin: { sortable: false },
       updated_at: { fit: true },
       actions: { sortable: false, fit: true }
@@ -28,13 +40,11 @@
         ]
       },
       {
-        column: 'has_admin',
-        label: 'Admin',
-        width: 'w-32',
-        options: [
-          { value: 'yes', label: 'Has admin' },
-          { value: 'no', label: 'No admin' }
-        ]
+        column: 'site_admin_id',
+        label: 'Site Admin',
+        width: 'w-48',
+        tom_select: true,
+        options: site_admin_options
       }
     ],
     data: @sites,
