fix(sites): Enable sorting on partner and event count columns in view

--- a/app/views/admin/sites/index.html.erb
+++ b/app/views/admin/sites/index.html.erb
@@ -22,8 +22,8 @@
     column_config: {
       name: {},
       primary_neighbourhood: { sortable: false },
-      partners_count: { align: :center, sortable: false, fit: true },
-      events_count: { align: :center, sortable: false, fit: true },
+      partners_count: { align: :center, fit: true },
+      events_count: { align: :center, fit: true },
       site_admin: { sortable: false },
       updated_at: { fit: true },
       actions: { sortable: false, fit: true }
